manifests/demo.yml

apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: spinnaker-demo
  namespace: spinnaker
  labels:
    source: demo
    stack: frontend
    app: spinnaker
spec:
  replicas: 2
  selector:
    matchLabels:
      source: demo
      app: spinnaker
  template:
    metadata:
      labels:
        source: demo
        app: spinnaker
    spec:
      containers:
      - name: primary
        image: index.docker.io/mklettner/spin-kub-v2-demo
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
---

kind: Service
apiVersion: v1
metadata:
  name: spinnaker-demo
  namespace: spinnaker
spec:
  selector:
    source: demo
    app: spinnaker
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
