manifests/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spinnaker-demo
  namespace: spinnaker
spec:
  hosts:
  - "spinnaker-demo.q.ebcont.com"
  gateways:
  - helloworld-gateway
  http:
  - match:
    route:
    - destination:
        host: spinnaker-demo
        port:
          number: 80
